--- a/buy-form.html
+++ b/buy-form.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Purchase Form</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="buyform.css">
 </head>
 <body>
   <h1>ALPS Interior</h1>
