--- a/buy-form.html
+++ b/buy-form.html
@@ -9,6 +9,7 @@
 <body>
   <h1>ALPS Interior</h1>
   <form action="mailto:lloyd.delacruz090@gmail.com" method="post" enctype="text/plain">
+    <div class="form-container">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
     
@@ -22,10 +23,11 @@
     <input type="number" id="quantity" name="quantity" required>
 
     <label for="quantity">Number:</label>
-    <input type="number" id="quantity" name="quantity" required>
+    <input type="number" id="Number" name="number" required>
 
     <input type="submit" value="Submit">
   </form>
+  </div>
   
 
   <script src="script.js"></script>
