--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,11 @@ nav ul li a {
       opacity: 1;
     }
   }
+  a {
+  text-decoration: none;
+  color: white;
+}
+
 
     </style>
   <meta charset="UTF-8">
@@ -63,7 +68,7 @@ nav ul li a {
     <nav>
         <ul>
             <b>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="product.html">Product</a></li>
             <li><a href="#">Contact</a></li>
             </b>
@@ -75,15 +80,15 @@ nav ul li a {
     <li><div class="contact-section">
         <div class="contact-info">
             <span>Our Facebook Page:</span>
-            <a href="https://www.facebook.com/ALPSInteriorFunitureManufucturer">Visit us on Facebook</a>
+            <a href="https://www.facebook.com/ALPSInteriorFunitureManufucturer"><b>Visit us on Facebook</b></a>
         </div>
         <li><div class="contact-info">
             <span>Our Email:</span>
-            <a href="mailto:alpsts.crew@gmail.com">alpsts.crew@gmail.com</a>
+            <a href="mailto:alpsts.crew@gmail.com"><b>alpsts.crew@gmail.com</b></a>
         </div>
         <li><div class="contact-info">
             <span>Phone Number:</span>
-            <a href="tel:+63962518943">09625187943</a>
+            <a href="tel:+63962518943"><b>09625187943</b></a>
         </div>
         <li><div class="contact-info">
             <span>Our Location:</span>
