--- a/product.html
+++ b/product.html
@@ -15,7 +15,7 @@
 
         <ul>
             <b>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="#product">Products</a></li>
             <li><a href="contact.html">Contact</a></li>
             </b>
