--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <nav>
         <ul>
             <b>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="product.html">Product</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            </b>
+                <li><a  href="home.html" class="nav-text"><u>Home</u></a></li>
+                <li><a href="Interiorblog.html" class="nav-text"><u>About</u></a></li>
+                <li><a href="product.html" class="nav-text"><u>Product</u></a></li>
+                <li><a href="contact.html" class="nav-text"><u>Contact</u></a></li>
+                    </b>
         </ul>
     </nav>
     </header>
@@ -32,10 +33,11 @@
     </div>
     <div class="banner" id="content">
         <h1>A L P S Interior Furniture Manufacturer</h1>
-        <p style="font-size: xx-large;">
-        <a href="home.html" class="btn"><b>See More...</b></a>
+        <p  class="text-animation" style="font-size: xx-large;">
+        <a href="home.html" class="btn"><b><u>See More...</u></b></a>
         </p>
       </div>
+      <h6>This page is under maintenance and under construction</h6>
 
 </body>
 </html>
