--- a/product.html
+++ b/product.html
@@ -11,14 +11,16 @@
    <header>
 <font color="white">
         <h2>A L P S Interior</h2>
+        <p><b>Design • Furniture</b></p>
  <nav>
 
         <ul>
             <b>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="#product">Products</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            </b>
+              <li><a  href="home.html" class="nav-text"><u>Home</u></a></li>
+              <li><a href="Interiorblog.html" class="nav-text"><u>About</u></a></li>
+              <li><a href="product.html" class="nav-text"><u>Product</u></a></li>
+              <li><a href="contact.html" class="nav-text"><u>Contact</u></a></li>
+                </b>
         </ul>
     </nav>
 </nav>
