--- a/home.html
+++ b/home.html
@@ -17,13 +17,23 @@
     <nav>
         <ul>
             <b>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="product.html">Product</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a  href="home.html" class="nav-text"><u>Home</u></a></li>
+            <li><a href="Interiorblog.html" class="nav-text"><u>About</u></a></li>
+            <li><a href="product.html" class="nav-text"><u>Product</u></a></li>
+            <li><a href="contact.html" class="nav-text"><u>Contact</u></a></li>
             </b>
         </ul>
     </nav>
     </header>
+    <body>
+    <div class="video-container">
+        <video class="video" src="Pictures/vidban.mp4" autoplay loop muted></video>
+        <div class="vidban">
+            <h1 class="typewriter-text">Interior Design</h1>
+          <p class="text-animation"><a href="Interiorblog.html"><u>See More.</u></a></p>
+        </div>
+      </div>
+      </body>
     <section id="home">
         <h2 class="fade-in">Who Is ALPS Interior?</h2>
         <article>
@@ -56,7 +66,7 @@ surpass expectations.</p>
 
 <p style="font-size: xx-large;"> <b>Product:</b></p>
 <div class="image-container">
-    <img src="Pictures/p20.4.jpg" alt="Image">
+    <img src="Pictures/ourproduct1.jpg" alt="Image">
     <div class="text-overlay">
         <p><b>Custom Furniture Design:</b> Our team of skilled designers
             collaborates closely with clients to create bespoke furniture
@@ -89,18 +99,20 @@ surpass expectations.</p>
 <section class="goal">
     <article class="fade-in">
 <h3>Our Goal?</h3>
-<p><b>Uncompromising Quality:</b>  Our goal is to consistently deliver furniture of the highest quality. We 
+<div class="pogi">
+<p class="left-paragraph"><b>Uncompromising Quality:</b>  Our goal is to consistently deliver furniture of the highest quality. We 
 strive for excellence in craftsmanship, utilizing premium materials and meticulous construction 
 techniques. By maintaining uncompromising standards, we aim to provide our customers with 
 furniture that exceeds their expectations in terms of durability, functionality, and overall 
 satisfaction</p><br>
-<p><b>Custmoer Satisfaction:</b>  Our goal is to consistently deliver furniture of the highest quality. We 
+<p class="right-paragraph"><b>Custmoer Satisfaction:</b>  Our goal is to consistently deliver furniture of the highest quality. We 
 strive for excellence in craftsmanship, utilizing premium materials and meticulous construction 
 techniques. By maintaining uncompromising standards, we aim to provide our customers with 
 furniture that exceeds their expectations in terms of durability, functionality, and overall 
 satisfaction</p>
 <br>
-<p><b>Design Innovation and Timeless Appeal:</b>  We aspire to be leaders in design innovation, 
+</div>
+<p style="text-align: center;"><b>Design Innovation and Timeless Appeal:</b>  We aspire to be leaders in design innovation, 
 continuously pushing the boundaries of creativity and functionality. Our goal is to create furniture solutions 
 that are not only visually striking but also stand the test of time. By blending modern design 
 trends with timeless elegance, we aim to offer furniture that enhances spaces, reflects 
@@ -112,7 +124,7 @@ individual style, and brings long-lasting joy to our customers' lives.</p>
 
 <footer>
     <h2>Let's Talk About Your Project</h2>
-    <a href="mailto:alpsts.crew@gmail.com">Contact Us</a>
+    <a href="mailto:alpsts.crew@gmail.com"><u>Contact Us</u></a>
         </div>
 
     </footer>
