--- a/Interiorblog.html
+++ b/Interiorblog.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>A L P S Interior</h1>
-        <p><b>Design • Furniture</b></p>
+        <p><b><u>Design • Furniture</u></b></p>
     
     <nav>
         <ul>
@@ -29,35 +29,36 @@
     <body class="baby">
         <section class="fade-in">
 
-        <header>
-            <h2>A L P S Interior</h2>
-        </header>
-    
-        <div class="blog-section">
-            <div class="blog-post">            <h2>Elevate Your Living Space with A L P S Interior Furniture and Manufacturer</h2>
-            <p>Welcome to <b>A L P S Interior Furniture and Manufacturer,</b> where innovation meets elegance to redefine your living spaces. Our commitment to quality craftsmanship and unique designs sets us apart as a premier interior design company dedicated to transforming your vision into reality.</p>
+            <section class="blog-section">
+                <div class="container">
+                  <div class="blog-post">
+                    <h2 class="blog-title">Elevate Your Living Space with A L P S Interior Furniture and Manufacturer</h2>
+            <p class="blog-content">Welcome to <b>A L P S Interior Furniture and Manufacturer,</b><br> where innovation meets elegance to redefine your living spaces.<br> Our commitment to quality craftsmanship and unique designs sets us apart as a premier interior design company dedicated to transforming your vision into reality.</p>
         </div>    
         <div class="blog-section">
-            <div class="blog-post">            <h2>Unleashing Creativity in Every Design</h2>
-            <p>At A L P S Interior Furniture and Manufacturer, we understand that your home is a reflection of your personality and style. Our team of skilled designers and craftsmen are passionate about creating custom furniture pieces that not only enhance your interiors but also tell your story. From contemporary minimalism to classic opulence, we bring your ideas to life with precision and creativity.</p>
-        </div>    
-        <div class="blog-section">
-            <div class="blog-post">
-                <h2>Tailored Solutions for Your Unique Needs</h2>
-            <p>Your home is as unique as you are, and we believe your furniture should be too. Our bespoke design services allow you to collaborate with our experts to create furniture that perfectly fits your space, taste, and lifestyle. Whether it's a cozy living room, a functional kitchen, or a luxurious bedroom, we tailor our designs to meet your specific needs and preferences.</p>
+            <div class="blog-post">           
+                 <h2 class="blog-title">Unleashing Creativity in Every Design</h2>
+            <p class="blog-content">At A L P S Interior Furniture and Manufacturer, we understand that your home is a reflection of your personality and style. Our team of skilled designers and craftsmen are passionate about creating custom furniture pieces that not only enhance your interiors but also tell your story. From contemporary minimalism to classic opulence, we bring your ideas to life with precision and creativity.</p>
         </div>    
         <div class="blog-section">
             <div class="blog-post">
-                <h2>Quality That Endures</h2>
-            <p>We take pride in the durability and quality of our furniture. A L P S Interior Furniture and Manufacturer sources only the finest materials to ensure longevity and resilience. Every piece is crafted with attention to detail, reflecting our commitment to excellence. Our furniture not only stands the test of time but also elevates the aesthetic appeal of your home.</p>
+                <h2 class="blog-title">Tailored Solutions for Your Unique Needs</h2>
+            <p class="blog-content">Your home is as unique as you are, and we believe your furniture should be too. Our bespoke design services allow you to collaborate with our experts to create furniture that perfectly fits your space, taste, and lifestyle. Whether it's a cozy living room, a functional kitchen, or a luxurious bedroom, we tailor our designs to meet your specific needs and preferences.</p>
+        </div>    
+        <div class="blog-section">
+            <div class="blog-post">
+                <h2 class="blog-title">Quality That Endures</h2>
+            <p class="blog-content">We take pride in the durability and quality of our furniture. A L P S Interior Furniture and Manufacturer sources only the finest materials to ensure longevity and resilience. Every piece is crafted with attention to detail, reflecting our commitment to excellence. Our furniture not only stands the test of time but also elevates the aesthetic appeal of your home.</p>
         </div>
         <div class="blog-section">
-            <div class="blog-post">            <h2>Stay on Trend with A L P S Interior Furniture</h2>
-            <p>Our design team is always ahead of the curve, keeping up with the latest trends and innovations in the world of interior design. From modern, sleek lines to timeless, classic pieces, we offer a diverse range of styles to suit every taste. Let us guide you through the latest trends and help you choose furniture that complements your lifestyle and current design preferences.</p>
+            <div class="blog-post">            
+                <h2 class="blog-title">Stay on Trend with A L P S Interior Furniture</h2>
+            <p class="blog-content">Our design team is always ahead of the curve, keeping up with the latest trends and innovations in the world of interior design. From modern, sleek lines to timeless, classic pieces, we offer a diverse range of styles to suit every taste. Let us guide you through the latest trends and help you choose furniture that complements your lifestyle and current design preferences.</p>
         </div>    
         <div class="blog-section">
-            <div class="blog-post">            <h2>Transforming Spaces, One Piece at a Time</h2>
-            <p>At A L P S Interior Furniture and Manufacturer, we believe that great design has the power to transform spaces and elevate experiences. Whether you're looking to revamp your entire home or add a statement piece to a room, our comprehensive range of furniture and interior design solutions has you covered.</p>
+            <div class="blog-post">            
+                <h2 class="blog-title">Transforming Spaces, One Piece at a Time</h2>
+            <p class="blog-content">At A L P S Interior Furniture and Manufacturer, we believe that great design has the power to transform spaces and elevate experiences. Whether you're looking to revamp your entire home or add a statement piece to a room, our comprehensive range of furniture and interior design solutions has you covered.</p>
         </div>    
     </section>
     </body>
