--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,15 @@
     <style>
       header {
     font-size: large;
-    text-align: center;
-    background-color: black;
+    text-align: left;
+    background-color: white;
     color: #fff;
     padding: 20px;
 }
 
         nav {
     font-size: large;
-	text-align: center;
+	text-align: right;
     background-color: none;
     padding: 5px;
 }
@@ -129,7 +129,7 @@ nav ul li a {
     <article class="fade-in">
     <header>
         <h2>A L P S Interior</h2>
-        <p><b>Design • Furniture</b></p>
+        <p><b><u>Design • Furniture</u></b></p>
     
     <nav>
         <ul>
