--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h2>A L P S Interior</h2>
-        <p><b>Design • Furniture</b></p>
+        <p><b><u>Design • Furniture</u></b></p>
     
     <nav>
         <ul>
@@ -27,9 +27,8 @@
     </header>
     <body>
     <div class="video-container">
-        <video class="video" src="Pictures/vidban.mp4" autoplay loop muted></video>
+        <video class="video" src="Pictures/vidban ulit.mp4" autoplay loop muted></video>
         <div class="vidban">
-            <h1 class="typewriter-text">Interior Design</h1>
           <p class="text-animation"><a href="Interiorblog.html"><u>See More.</u></a></p>
         </div>
       </div>
@@ -41,9 +40,9 @@
 furniture production and delivery company operating in the 
 Philippines.<br> With a strong focus on quality craftsmanship 
 and exceptional customer service, we have established 
-ourselves as a trusted provider of stylish and durable 
-furniture solutions.<br> Our comprehensive range of furniture 
-includes pieces for residential, commercial, and hospitality 
+ourselves as a<br> trusted provider of stylish and durable 
+furniture solutions. Our comprehensive range of furniture 
+includes pieces<br> for residential, commercial, and hospitality 
 settings, catering to the diverse needs and preferences of 
 our clients.</p><br>
         </article>
@@ -53,10 +52,10 @@ our clients.</p><br>
             <p>Since our inception, we have focused on delivering 
 unparalleled quality and customer satisfaction.<br> Our 
 dedicated team of skilled artisans, designers, and 
-professionals work tirelessly to bring our clients' 
-visions to life.<br> From residential homes to commercial 
+professionals work tirelessly to bring our clients'<br> 
+visions to life. From residential homes to commercial 
 establishments and hospitality spaces, we understand 
-the diverse needs and preferences of our customers 
+the diverse<br> needs and preferences of our customers 
 and strive to provide tailored furniture solutions that 
 surpass expectations.</p>
         </article>
