--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h2>A L P S Interior</h2>
-        <p><b>Design • Furniture</b></p>
+        <p><b><u>Design • Furniture</u></b></p>
     
     <nav>
         <ul>
