--- a/sofa.html
+++ b/sofa.html
@@ -17,7 +17,7 @@
    <header>
 <font color="white">
         <h2>A L P S Interior</h2>
-                <p><b>Design • Furniture</b></p>
+        <p><b><u>Design • Furniture</u></b></p>
                  <nav>
 
         <ul>
