--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
    <header>
 <font color="white">
         <h2>A L P S Interior</h2>
-        <p><b>Design • Furniture</b></p>
+        <p><b><u>Design • Furniture</u></b></p>
  <nav>
 
         <ul>
